src/App.css
/* #region Setup */
html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}

*, *:before, *:after {box-sizing: inherit}

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
/*#endregion*/

/* Variables */
:root {
	--spacing: min(calc(8px + 1.5625vw), 30px);
	--fontSizeBase: 1rem;

	--sizeButton: 32px;

	--colorWhite: white;
	--colorBlack: black;
	--colorDarkGreen: green;
	--colorGreen: mediumseagreen;
	--colorYellow: khaki;
	--colorRed: salmon;

	--colorTextPrimary: #212121;
	--colorTextSecondary: #757575;
	--colorDivider: #BDBDBD;

	--colorNone: rgba(0, 0, 0, 0)
}

/* #region Base Styling */
* {
	transition-property: border, border-color, border-radius, background-color, color, transform;
	transition-duration: 0.3s;
}

html {
	text-align: center;
	font-size: 125%;
	color: var(--colorTextPrimary);
}

.App {
	position: relative;
	min-height: 100vh;
}

section {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.wrapper {
	width: clamp(16rem, 90vw, 70rem);
	margin: 0 auto;
	padding-bottom: min(calc(2.5*var(--spacing)), 60px);

	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

ul {
	padding: 0;
	padding: 0;
	list-style: none;
}

ol {
	margin: 0;
	padding: 0;
	list-style: none;
}
/* #endregion */

/* #region Typographical Styling*/
h1, h2, h3, h4{
	margin: var(--spacing);
}

h1 {
  	font-size: clamp(2 * var(--fontSizeBase), 1.8662 * var(--fontSizeBase) + 0.7643vw, 2.6 * var(--fontSizeBase)) !important;
}

h2 {
  	font-size: clamp(1.5 * var(--fontSizeBase), 1.3662 * var(--fontSizeBase) + 0.7643vw, 2.1 * var(--fontSizeBase));
}

h3 {
  	font-size: clamp(1 * var(--fontSizeBase), 0.9108 * var(--fontSizeBase) + 0.5096vw, 1.4 * var(--fontSizeBase));
}

h4, label, input, button {
  	font-size: clamp(0.9 * var(--fontSizeBase), 0.8554 * var(--fontSizeBase) + 0.2548vw, 1.1 * var(--fontSizeBase));
}

p {
	font-size: clamp(0.8 * var(--fontSizeBase), 0.7777 * var(--fontSizeBase) + 0.1274vw, 0.9 * var(--fontSizeBase));
}

.italic {
	font-style: italic;
}

.colorTextSecondary {
	color: var(--colorTextSecondary);
}

/*#endregion*/

/* #region Button Styling */
button {
	margin: (0.25 * var(--spacing));
	padding: calc(0.25 * var(--spacing)) calc(0.5 * var(--spacing));
	border: 2px solid var(--colorDivider);
}

.buttonSquare {
	padding: calc(0.5 * var(--spacing));
	border-radius: 2px;
	border: 2px solid var(--colorWhite);
	background-color: var(--colorBlack);
	color: var(--colorWhite);

	display: inline-flex;
	justify-content: center;
	align-items: center;
}

.buttonSquare:hover {
	border: 2px solid var(--colorBlack);
	background-color: var(--colorWhite);
	color: var(--colorBlack);
}

.buttonCircle {
	display: flex;
	justify-content: center;
	align-items: center;
	border-radius: 50%;
	height: 40px;
	width: 40px;
}

.buttonCircle:hover {
	border-color: var(--colorBlack);
}
/* #endregion */

/* #region Input Styling */
input[type=text] {
	height: var(--sizeButton);
	padding: calc(0.5 * var(--sizeButton));

	border: 1px solid var(--colorBlack);
	text-align: center;
}

input[type=text][disabled] {
	background-color: var(--colorNone);
	color: var(--colorWhite);
}
/* #endregion */

/* #region Header Styling */
header {
	margin: var(--spacing) 0;
	padding-top: var(--spacing);
}

header h1 {
	margin: var(--spacing) 0 0 0;
}
/* #endregion */

/* #region Display User login Styling */
.displayUserLogin {
	background-color: var(--colorBlack);
	padding: calc(0.5 * var(--spacing)) var(--spacing);
	color: var(--colorWhite);

	display: flex;
	flex-direction: row;
	justify-content: flex-end;
	align-items: center;
	gap: var(--spacing)
}

.displayUserLogin input {
	flex-grow: 1;
	flex-shrink: 1;
	width: 0;
	max-width: 250px;
	min-width: 185px;
	border-color: var(--colorWhite);
}

.displayUserLogin button {
	width: 170px;
}
/* #endregion */

/* #region Display Create List Styling */
.displayCreateList {	
	display: inline-block;
	margin-bottom: calc(1 * var(--spacing));
}

.displayCreateList >*+* {
	margin-top: calc(0.5 * var(--spacing));
}

.displayCreateList div{
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
	gap: var(--spacing);
	align-items: center;
	text-align: right;
}

.displayCreateList > label {
	margin-right: var(--spacing);
}
/* #endregion */

/* #region Display Lists */
/* Display Lists Settings (Public, User, Return to All)*/
.displayListsSettings {
	width: 100%;
	padding: var(--spacing);
	border-top: 1px solid var(--colorDivider);
}

.displayListsSettings form {
	display: flex;
	justify-content: center;
	gap: var(--spacing);
	padding: calc(0.5 * var(--spacing));
	padding-top: calc(1.5 * var(--spacing));
}

.displayListsSettings input {
	display: none;
}

.displayListsSettings label {
	padding: calc(0.25 * var(--spacing)) calc(0.5 * var(--spacing));
	border: 2px solid var(--colorDivider);
}

.displayListsSettings input:checked + label {
	border: 2px solid var(--colorGreen);
	border-radius: 3px;
}

.displayListsSettings button {
	margin-bottom: calc(0.75 * var(--spacing));
}

/* Display Lists Container - Styles all viewable lists or selected list */
.displayListsContainer{
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	flex-wrap: wrap;
	gap: var(--spacing);

	width: 100%;
	margin: 0;
}

.displayListsContainer li {
	border: 1px solid var(--colorDivider);
	flex-grow: 1;
	margin: 0 auto;
	margin-bottom: 50px;
	padding: calc(0.5 * var(--spacing));
}

.displayListsContainer li:only-child {
	border: 1px solid var(--colorNone);
	border-top: 1px solid var(--colorDivider);
	margin-bottom: 0px;
}

.displayListsContainer button {
	margin-bottom: calc(0.5 * var(--spacing));
}

.displayListsContainer label + button {
	margin-left: var(--spacing);
}
/* #endregion */

/* #region Display List Items */
.displayListItemsContainer {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;

	width: 100%;
}

.displayListItemsContainer li {
	width: 90%;	
	padding: calc(0.5 * var(--spacing));
	border-top: 1px solid var(--colorDivider);

	display: flex;
	justify-content: space-between;
	align-items: center;
}

/* Style container and buttons to move list item up and down */
.listItemLeft {
	display: flex;
	align-items: center;
}

.listItemLeft button {
	padding: 0;
	border: none;
	background-color: var(--colorNone);
}

.listItemLeft button:hover {
	transform: scale(1.5);
}

.listItemLeft button:disabled {
	color: var(--colorDivider)
}

.listItemLeft button:disabled:hover {
	transform: scale(1);
}

.listItemLeft .listItemIndex {
	margin: var(--spacing);
}

.listItemMoveContainer {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

/* Style list item text element */
.listItemTextContainer {
	flex-grow: 1;
}

.listItemTextContainer form {
	display: flex;
	justify-content: center;
	align-items: center;
}

.listItemTextContainer input {
	width: 100%;
}

.listItemTextContainer p {
	word-break: break-all;
}

.listItemTextContainer button {
	margin-left: calc(0.5 * var(--spacing));
}

/* Style edit, confirm edit, and delete list item buttons */
.listItemRightContainer {
	display: flex;
	gap: calc(0.5 * var(--spacing));
	height: 40px;
	margin-left: calc(0.5 * var(--spacing));
}

.listItemRightContainer button.listItemSubmit {
	background-color: var(--colorGreen);
}

.listItemRightContainer button.listItemModify {
	background-color: var(--colorYellow);
}

.listItemRightContainer button.listItemDelete {
	background-color: var(--colorRed);
}

/* Style empty list text */
.emptyListText p {
	padding-bottom: var(--spacing);
}
/* #endregion */

/* #region Display Create List Items */
/* Display Create List Item - Styles list item input and Add button */
.displayCreateListItem {
	width: 90%;
	padding: var(--spacing);
	border-top: 1px solid var(--colorDivider);
}

.displayCreateListItem button {
	margin: calc(0.5 * var(--spacing)) var(--spacing);
}
/* #endregion */

/* #region Footer Styling */
footer {
	position: absolute;
	bottom: 0;
	width: 100%;

	height: min(calc(2.5*var(--spacing)), 60px);

	background-color: var(--colorBlack);
	color: var(--colorWhite);

	display: flex;
	justify-content: center;
	align-items: center;
}

footer p, footer a:visited {
	margin: 0;
	padding: 0;
	color: transparent;
	text-shadow: 0 0 0 var(--colorWhite)
}

footer span {
	text-shadow: 0 0 0 var(--colorDarkGreen)
}

footer a {
	color:transparent;
	text-decoration: underline;
	text-decoration-color: var(--colorDarkGreen);
}
/* #endregion */

